lots of changes!

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 
         <div class="col-md-8 mt-2">
 
-            <h4><a href="{{ '/' | relative_url }}" class="text-white font-weight-normal">{{ site.title }}</a></h4>
+            <h4><a href="{{ '/' | relative_url }}" class="text-white font-weight-normal title">{{ site.title }}</a></h4>
             <p class="text-white"><small>{{ site.description }}</small></p>
             <nav>
                 <ul class="nav nav-pills">
@@ -22,16 +22,6 @@
                 </ul>
             </nav>
 
-        </div>
-
-        <div class="col-md-4 mt-2 text-right">
-            <p class="text-white" id="footer-credits">
-                <small><em>built with</em>
-                    <a href="https://collectionbuilder.github.io/" target="_blank" rel="noopener" title="CollectionBuilder">
-                        <img src="{{ '/assets/img/collectionbuilder-logo.png' | relative_url }}" class="img-fluid" alt="CollectionBuilder logo" >
-                    </a>
-                </small>
-            </p>
         </div>
 
     </div>
