--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -15,3 +15,15 @@
   max-width: auto;
   padding-left: 10px;
 }
+
+.title {
+  font-family: 'Homemade Apple', cursive;
+}
+
+p {
+  font-family: 'Homemade Apple', cursive;
+}
+
+.tagline {
+  font-family: 'Lobster', cursive;
+}
