--- a/_includes/collection-banner.html
+++ b/_includes/collection-banner.html
@@ -31,8 +31,8 @@
 <div id="home-banner" class="container-fluid mb-0 p-0">
     <div id="home-title-box" >
         <div class="title-card p-2 text-center">
-            <h1 class="display-4">{{ site.title }}</h1>
-            {% if site.tagline %}<p class="mb-0">{{ site.tagline }}</p>{% endif %}
+            <h1 class="display-4 title">{{ site.title }}</h1>
+            {% if site.tagline %}<p class="mb-0 tagline">{{ site.tagline }}</p>{% endif %}
         </div>
     </div>
     {% unless site.data.theme.featured-image contains '/' %}<div class="text-right p-0 mt-0">
@@ -41,7 +41,7 @@
 </div>
 {%- else -%}
 <div class="container pt-2">
-    <h1><a class="text-dark font-weight-normal" href="{{ site.baseurl }}/" >{{ site.title }}</a></h1>	 
+    <h1><a class="text-dark font-weight-normal title" href="{{ site.baseurl }}/" >{{ site.title }}</a></h1>	 
             {% if site.tagline %}<p>{{ site.tagline }}</p>{% endif %}
 </div>
 {%- endif -%}
