working on messing around with fonts and colors.

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -17,13 +17,18 @@
 }
 
 .title {
-  font-family: 'Homemade Apple', cursive;
+  font-family: 'Hina Micho', serif;
 }
 
 p {
-  font-family: 'Homemade Apple', cursive;
+  font-family: 'Roboto', sans-serif;
 }
 
 .tagline {
-  font-family: 'Lobster', cursive;
+  font-family: 'Roboto', sans-serif;
+}
+
+h2 {
+  font-family: 'Hina Micho', serif;
+  font-size: 60px;
 }
