--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -44,7 +44,7 @@ a {
 }
 .navbar-dark .navbar-nav .nav-link {
     color: rgba(230, 218, 55, 0.644);
-    font-size: 1.5em;
+    font-size: 18px;
 }
 /* footer */
 #footer-credits {
